# uvwframe

./: LICENSE.md  README.md
code/: CMakeLists.txt  Helper.rc  Plugin.cpp  Plugin.def  debug.cpp  debug.h  frame_mod.cpp  frame_mod.h  frame_mod_edit.cpp  plugin.h  resource.h  uvwframe.cpp  uvwframe.h  uvwframe_mesh.cpp
code/Max2010/: CMakeLists.txt
code/Max2012/: CMakeLists.txt
