#######################################################
# P L U G I N   F O R   3 D S M A X   2 0 1 2         #
#######################################################

INCLUDE_DIRECTORIES ( ${MAXSDK_2012_HEADERS_DIR} )
LINK_DIRECTORIES ( ${MAXSDK_2012_LIBRARY_DIR} )

ADD_LIBRARY ( ${UVW_FRAME_MAX_2012} SHARED ${SOURCE_FILES} ${HEADER_FILES} ${RESOURCE_FILES} )
TARGET_LINK_LIBRARIES( ${UVW_FRAME_MAX_2012} ${MAX_LIBS} )

SET_TARGET_PROPERTIES( ${UVW_FRAME_MAX_2012} PROPERTIES OUTPUT_NAME "Max2012/UvwFrame" )
SET_TARGET_PROPERTIES( ${UVW_FRAME_MAX_2012} PROPERTIES SUFFIX ".dlo" )
SET_TARGET_PROPERTIES( ${UVW_FRAME_MAX_2012} PROPERTIES CLEAN_DIRECT_OUTPUT 1 )

SET ( LOCAL_WARNING_FLAGS /W3 )
SET ( LOCAL_RTTI_FLAGS /GR )

ADD_CUSTOM_COMMAND( TARGET ${UVW_FRAME_MAX_2012} POST_BUILD COMMAND copy ..\\Bin\\$(ConfigurationName)\\Max2012\\UvwFrame.dlo "${PROGRAM_FILES}\\Autodesk\\3ds Max 2012\\plugins" )